--- a/Ajax/index.html
+++ b/Ajax/index.html
@@ -10,6 +10,12 @@
 <body>  
     <h1>AJAX</h1>
     <button id="btn_add">Add Posts</button>
+    <form action="" method="GET">
+        <input type="hidden" id="id_post">
+        <input type="text" name="title" placeholder="title" id="title">
+        <textarea name="body"  cols="30" rows="10" id="body"></textarea>
+        <input type="submit" value="submit" id="submit">
+    </form>
     <section id="list-post"></section>
 
 </body>
